rwd-projekt2.css
* {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
  font-family: "Roboto";
}

.container {
  width: 100%;
  height: 100%;
  margin: 0 auto;
}

/* MEDIUM DEVICES LANDSCAPE TABLETS (768px - 959px)  */
/* @media screen and (min-width: 768px) {
  .container {
    width: 480px;
  }
}  */

/* LARGE DEVICES DESKTOP (960px - 1199px) */
@media screen and (min-width: 960px) {
  .container {
    width: 960px;
  }
}
/* XL DEVICES (1200px AND UP) */
/* @media screen and (min-width: 1200px) {
  .container {
    width: 960px;
  }
} */

#nav-bar {
  padding: 20px 25px;
  background-color: #4e4e4e;
  color: white;
  display: flex;
  justify-content: space-between;
}

button {
  font-size: 16px;
}
.nav-buttons {
  align-self: center;
  border: none;
  padding: 0px 5px;
  background-color: rgba(0, 0, 0, 0);
  color: white;
}
.new-anchor {
  text-decoration: none;
  color: white;
}

@media screen and (min-width: 960px) {
  .nav-buttons {
    padding: 0px 20px;
  }

  :hover.contact-but {
    cursor: not-allowed;
  }
}

#header {
  height: 100vh;
}
.site-banner {
  height: auto;
  color: white;
  background-image: url(https://images.unsplash.com/photo-1643575102128-0d6b42fbdda1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.banner-text {
  padding: 100px 15px;
  font-weight: bolder;
}
.banner-t {
  padding-bottom: 25px;
}

@media screen and (min-width: 960px) {
  .banner-text {
    padding: 100px 50px;
    width: 60%;
  }
}

.offer-button {
  background: rgba(0, 0, 0, 0);
  border: 3px solid white;
  color: white;
  font-weight: bolder;
  padding: 5px 60px;
}

@media screen and (min-width: 960px) {
  :hover.offer-button {
    background-color: white;
    color: black;
    transition: 1s ease;
  }
}

h1,
h3 {
  padding: 20px 0px;
  font-weight: 700;
}

#about {
  background-color: #f1f1f1;
  display: flex;
  flex-direction: column;
  padding: 20px 30px;
}

.people-title,
.offer-title {
  margin: 0%;
  padding-bottom: 20px;
  align-self: center;
}

.people {
  padding: 20px;
  margin: 0 auto;
}

.opis,
.opis-right {
  text-align: justify;
}

@media screen and (min-width: 960px) {
  .people-title,
  .offer-title {
    align-self: flex-start;
  }
  .people {
    display: flex;
    justify-content: space-around;
    gap: 20px;
  }

  .opis,
  .opis-right {
    margin: 0%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
  }
  .opis {
    text-align: left;
  }
  .opis-right {
    text-align: right;
  }

  .people:nth-of-type(even) {
    flex-direction: row-reverse;
  }
}

.photo {
  width: 197px;
  height: 197px;
  border-radius: 50%;
  margin: auto;
  display: flex;
  align-content: center;
  background-color: lightblue;
}
img {
  width: auto;
  height: auto;
  border-radius: 50%;
}
#main-offer {
  display: flex;
  flex-direction: column;
  background-color: #405d78;
  color: white;
  padding: 20px 30px;
}
.offer {
  display: flex;
  justify-content: center;
  align-content: space-around;
  flex-wrap: wrap;
  gap: 50px;
}

.box {
  width: 420px;
  height: 420px;
  background-color: #f1f1f1;
  color: black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.dot {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #e07a64;
  position: absolute;
  top: -10px;
  left: -10px;
}

@media screen and (min-width: 960px) {
  .offer {
    padding: 100px;
  }
  .box {
    width: 180px;
    height: 180px;
  }

  :hover.box {
    transform: scale(1.05);
    transition: 0.5s ease;
  }
}

#footer {
  padding: 20px 30px;
  background-color: #4e4e4e;
  color: white;
  display: flex;
  justify-content: space-between;
}
.fa-brands {
  padding: 0px 20px;
}

